feat(note): get all endpoints
